# mlx-audio-week5

.maria/: .envrc  .gitignore  gpu-script.sh  main.py  pyproject.toml
.maria/src/: utils.py
.maria/src/model/: __init__.py  accent_dataset.py  dataset.py  dummy.py  model.py  sample.py  sweep_config.py  train.py  whisper_accent_test.py
.maria/src/model/results/: whisper_results.csv
