[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "jiwer>=3.0.0",
    "librosa==0.11.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "matplotlib==3.10.3",
    "wandb>=0.20.1",
    "soundfile>=0.12.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "openai-whisper @ git+https://github.com/openai/whisper.git"
]